api-gateway/src/main/java/org/example/apigateway/errors/handler/ErrorRes.java
package org.example.apigateway.errors.handler;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;
import org.springframework.http.HttpStatus;

@Data
@AllArgsConstructor
@NoArgsConstructor
public class ErrorRes {
    private String message;
    private String code;
    private HttpStatus status;
}
